# megalib

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  TODO.md  mega-sequence.ps1  mods.dot  project.acb  readme.md  todo.md  types.dot
.agentra/health-ledger/: agentic-codebase-cli.json  agentic-memory.json
.codex/: README.md  config.toml
.codex/skills/: sequential-debug.md
.cursor/: mcp.json
.cursor/plans/: deferred_key_queue_c3ed8ff0.plan.md
agent/: brain.amem  lib_sequence.jsonl  lib_sequence1.jsonl  tasks
agent/.amem-backups/: brain.20260311103116.amem.bak  brain.20260311110116.amem.bak
agent/inputs/: architecture.md  cpp_sdk_map.md  decisions.md  errors.md  public_api.md  rust_sdk_map.md
agent/mitm/: lib_sequence.jsonl  sdk_sequence.jsonl
agent/reports/: behavior_matrix.md  cpp_inventory.md  discovery.md  inventory.md  megalib_login.jsonl  rust_inventory.md  trace_parity.md  verification.md
agent/tasks/: 01-split-sc-polling-from-command-handling.md  02-make-action-packet-handling-non-blocking.md  05-debounce-and-coalesce-upv-persist.md  06-keep-upload-preflight-minimal.md
agents/: brain.amem  project.acb
agents/inputs/: api.md  architecture.md  readme.md  testing.md
agents/mitm/: lib_sequence.jsonl
agents/outputs/: architectural_parity_epic.md  architectural_parity_report.md  architectural_parity_story_10_scheduled_backup.md  architectural_parity_story_10a_backup_sync_runtime.md  architectural_parity_story_10b_scheduled_copy_controller.md  architectural_parity_story_11_mount_fuse_subsystem.md  architectural_parity_story_12_validation_harness.md  architectural_parity_story_12b_architecture_gap_ledger.md  architectural_parity_story_1_core_engine_boundary.md  architectural_parity_story_2_request_runtime.md  architectural_parity_story_3_persistence_spi.md  architectural_parity_story_4_tree_cache_coherency.md  architectural_parity_story_4b5_transfer_checkpoint_reset.md  architectural_parity_story_4b_production_persistence_backend.md  architectural_parity_story_4c_production_tree_cache_hardening.md  architectural_parity_story_5_transfer_runtime.md  architectural_parity_story_6_public_event_subsystem.md  plan.md  (+10 more)
examples/: cached_session.rs  cli.rs  dl.rs  download.rs  download_public.rs  download_resume.rs  export.rs  folder.rs  login.rs  ls.rs  mkdir.rs  mv.rs  node_api.rs  passwd.rs  register.rs  rename.rs  rm.rs  sequence.rs  share.rs  stat.rs  upload.rs  upload_bytes.rs  upload_reader.rs  upload_resume.rs  verify.rs
src/: base64.rs  error.rs  http.rs  lib.rs  preview.rs  progress.rs  public.rs
(+68 files in other folders)
