[package]
name = "megalib"
version = "0.1.0"
edition = "2021"
description = "Rust client library for Mega.nz cloud storage"
license = "MIT OR Apache-2.0"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cryptography
aes = "0.8"
ctr = "0.9"
rsa = { version = "0.9", features = ["sha2"] }
rand = "0.8"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
num-integer = "0.1"
hmac = "0.12"
pbkdf2 = "0.12"
sha2 = "0.10"

# Base64
base64 = "0.22"

# Error handling
thiserror = "1"
image = "0.25.9"
hex = "0.4.3"

[dev-dependencies]
tokio-test = "0.4"
