[package]
name = "megalib"
version = "0.7.0"
edition = "2024"
description = "Rust client library for Mega.nz cloud storage"
license = "MIT"
repository = "https://github.com/11philip22/megalib"
keywords = ["mega", "meganz", "cloud-storage", "file-transfer"]
categories = ["api-bindings", "asynchronous", "web-programming::http-client"]

[dependencies]
# HTTP client - works on both platforms with different backends
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "socks"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cryptography
aes = "0.8"
ctr = "0.9"
rsa = { version = "0.9", features = ["sha2"] }
rand = "0.8"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
num-integer = "0.1"
hmac = "0.12"
pbkdf2 = "0.12"
sha2 = "0.10"
aes-gcm = "0.10"
# Use the latest stable CCM crate (0.5.x). 0.6 is still in pre-release.
ccm = "0.5"
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets"] }

# Base64
base64 = "0.22"

# Error handling
thiserror = "1"
hex = "0.4.3"
futures = "0.3"
tracing = "0.1"

# Ensure getrandom works in WASM (uses browser crypto)
getrandom = { version = "0.2", features = ["js"] }

# Native-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }
image = "0.25.9"

# WASM-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
